@@ -1627,6 +1627,12 @@
     </tr>
 
     <tr>
+      <td>Toggle 'Turbo' mode</td>
+      <td>Control + t</td>
+      <td>Control + t</td>
+    </tr>
+
+    <tr>
       <td>Toggle sound on/off</td>
       <td>Control + ]</td>
       <td>Control + ]</td>
@@ -2005,6 +2011,11 @@
     </tr>
 
     <tr>
+      <td><pre>-turbo &lt;1|0&gt;</pre></td>
+      <td>Enable 'Turbo' mode for maximum emulation speed.</td>
+    </tr>
+
+    <tr>
       <td><pre>-uimessages &lt;1|0&gt;</pre></td>
       <td>Enable or disable display of message in the UI. Note that messages
         indicating serious errors override this setting, and are always
@@ -2063,29 +2074,29 @@
     <td>Set the pitch o f Pitfall II music.</td>
   </tr>
 
-    <tr>
-      <td><pre>-tia.zoom &lt;zoom&gt;</pre></td>
-      <td>Use the specified zoom level (integer) while in TIA/emulation mode.
-      </td>
-    </tr>
+  <tr>
+    <td><pre>-tia.zoom &lt;zoom&gt;</pre></td>
+    <td>Use the specified zoom level (integer) while in TIA/emulation mode.
+    </td>
+  </tr>
 
-    <tr>
-      <td><pre>-tia.vsizeadjust &lt;-5 - 5&gt;</pre></td>
-      <td>Adjust the display height of the TIA image
-      </td>
-    </tr>
+  <tr>
+    <td><pre>-tia.vsizeadjust &lt;-5 - 5&gt;</pre></td>
+    <td>Adjust the display height of the TIA image
+    </td>
+  </tr>
 
-    <tr>
-      <td><pre>-tia.inter &lt;1|0&gt;</pre></td>
-      <td>Use interpolation for the TIA image (results in blending/smoothing
-        of the image).</td>
-    </tr>
+  <tr>
+    <td><pre>-tia.inter &lt;1|0&gt;</pre></td>
+    <td>Use interpolation for the TIA image (results in blending/smoothing
+      of the image).</td>
+  </tr>
 
-    <tr>
-      <td><pre>-tia.fs_stretch &lt;1|0&gt;</pre></td>
-      <td>Stretch TIA image completely while in fullscreen mode, vs. keeping the correct
-        aspect ratio.</td>
-    </tr>
+  <tr>
+    <td><pre>-tia.fs_stretch &lt;1|0&gt;</pre></td>
+    <td>Stretch TIA image completely while in fullscreen mode, vs. keeping the correct
+      aspect ratio.</td>
+  </tr>
 
   <tr>
     <td><pre>-tia.fs_overscan &lt;0 - 10&gt;</pre></td>
