@@ -22,6 +22,8 @@
     a game. This allows the user to save high scores for these games. For each
     game and variation, the top 10 scores can be saved. (TODO: Doc)
 
+  * Added 'Turbo' mode, runs the game as fast as the computer allows.
+
   * Added option which lets default ROM path follow launcher navigation (TODO: Doc)
 
   * Added displaying last write address in the debugger.
